--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,5 @@
 DOCKER_HOST_ID=abc
 HOST_ID_PAYLOAD_KEY=oson_algorithm_environment_unid
-TARGET_API_HOST=http://localhost:6089
+TARGET_API_ENDPOINT=http://localhost:6089/api/docker/event
 CONTAINER_EVENTS=start,stop,die
+DOCKER_SOCKET_PATH=/var/run/docker.sock
