feat: add ability to configure port

--- a/.example.env
+++ b/.example.env
@@ -4,3 +4,4 @@ TARGET_API_ENDPOINT=http://localhost:6089/api/docker/event
 TARGET_API_TOKEN=abc
 CONTAINER_EVENTS=start,stop,die
 DOCKER_SOCKET_PATH=/var/run/docker.sock
+PORT=3003
